parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    OTHERWISE
    ELSE

Grammar

Rule 0     S' -> program
Rule 1     program -> sentence
Rule 2     program -> sentence program
Rule 3     sentence -> proposition SENTENCE_END
Rule 4     sentence -> EQUALS proposition SENTENCE_END
Rule 5     sentence -> DOES proposition SENTENCE_END
Rule 6     sentence -> EQUALS numeric_expression numeric_expression SENTENCE_END
Rule 7     sentence -> EQUALS identifier SENTENCE_END
Rule 8     sentence -> DOES identifier SENTENCE_END
Rule 9     sentence -> proposition IF proposition SENTENCE_END
Rule 10    sentence -> proposition IMPLIES proposition SENTENCE_END
Rule 11    sentence -> IF proposition THEN proposition SENTENCE_END
Rule 12    proposition -> proposition AND proposition
Rule 13    proposition -> NOT proposition
Rule 14    proposition -> proposition OR proposition
Rule 15    proposition -> numeric_expression DIVIDES numeric_expression
Rule 16    proposition -> numeric_expression DIVIDES numeric_expression EVENLY
Rule 17    proposition -> numeric_expression NOT DIVIDE numeric_expression
Rule 18    proposition -> numeric_expression NOT DIVIDE numeric_expression EVENLY
Rule 19    proposition -> numeric_expression DOES NOT DIVIDE numeric_expression
Rule 20    proposition -> numeric_expression DOES NOT DIVIDE numeric_expression EVENLY
Rule 21    proposition -> numeric_expression EQUALS EQUALS numeric_expression
Rule 22    proposition -> numeric_expression EQUALS numeric_expression
Rule 23    proposition -> TRUE
Rule 24    proposition -> numeric_expression inequality numeric_expression
Rule 25    proposition -> FALSE
Rule 26    inequality -> inequality OR EQUALS
Rule 27    inequality -> inequality OR EQUALS TO
Rule 28    inequality -> EQUALS inequality
Rule 29    inequality -> CMP_LT
Rule 30    inequality -> CMP_GT
Rule 31    inequality -> THAN
Rule 32    inequality -> CMP_LT THAN
Rule 33    inequality -> CMP_GT THAN
Rule 34    numeric_expression -> numeric_expression PLUS numeric_expression
Rule 35    numeric_expression -> numeric_expression MINUS numeric_expression
Rule 36    numeric_expression -> numeric_expression TIMES numeric_expression
Rule 37    numeric_expression -> numeric_expression TIMES BY numeric_expression
Rule 38    numeric_expression -> numeric_expression DIVIDE numeric_expression
Rule 39    numeric_expression -> numeric_expression DIVIDE BY numeric_expression
Rule 40    numeric_expression -> numeric_expression POWER numeric_expression
Rule 41    numeric_expression -> numeric_expression MOD numeric_expression
Rule 42    numeric_expression -> identifier
Rule 43    numeric_expression -> numeric_const
Rule 44    numeric_const -> NUMERIC_CONSTANT
Rule 45    identifier -> identifier_content
Rule 46    identifier -> A identifier_content
Rule 47    identifier -> THE identifier_content
Rule 48    identifier_content -> UNWORD
Rule 49    identifier_content -> UNWORD identifier_content

Terminals, with rules where they appear

A                    : 46
AND                  : 12
BY                   : 37 39
CMP_GT               : 30 33
CMP_LT               : 29 32
DIVIDE               : 17 18 19 20 38 39
DIVIDES              : 15 16
DOES                 : 5 8 19 20
ELSE                 : 
EQUALS               : 4 6 7 21 21 22 26 27 28
EVENLY               : 16 18 20
FALSE                : 25
IF                   : 9 11
IMPLIES              : 10
MINUS                : 35
MOD                  : 41
NOT                  : 13 17 18 19 20
NUMERIC_CONSTANT     : 44
OR                   : 14 26 27
OTHERWISE            : 
PLUS                 : 34
POWER                : 40
SENTENCE_END         : 3 4 5 6 7 8 9 10 11
THAN                 : 31 32 33
THE                  : 47
THEN                 : 11
TIMES                : 36 37
TO                   : 27
TRUE                 : 23
UNWORD               : 48 49
error                : 

Nonterminals, with rules where they appear

identifier           : 7 8 42
identifier_content   : 45 46 47 49
inequality           : 24 26 27 28
numeric_const        : 43
numeric_expression   : 6 6 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 24 24 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41
program              : 2 0
proposition          : 3 4 5 9 9 10 10 11 11 12 12 13 14 14
sentence             : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . sentence
    (2) program -> . sentence program
    (3) sentence -> . proposition SENTENCE_END
    (4) sentence -> . EQUALS proposition SENTENCE_END
    (5) sentence -> . DOES proposition SENTENCE_END
    (6) sentence -> . EQUALS numeric_expression numeric_expression SENTENCE_END
    (7) sentence -> . EQUALS identifier SENTENCE_END
    (8) sentence -> . DOES identifier SENTENCE_END
    (9) sentence -> . proposition IF proposition SENTENCE_END
    (10) sentence -> . proposition IMPLIES proposition SENTENCE_END
    (11) sentence -> . IF proposition THEN proposition SENTENCE_END
    (12) proposition -> . proposition AND proposition
    (13) proposition -> . NOT proposition
    (14) proposition -> . proposition OR proposition
    (15) proposition -> . numeric_expression DIVIDES numeric_expression
    (16) proposition -> . numeric_expression DIVIDES numeric_expression EVENLY
    (17) proposition -> . numeric_expression NOT DIVIDE numeric_expression
    (18) proposition -> . numeric_expression NOT DIVIDE numeric_expression EVENLY
    (19) proposition -> . numeric_expression DOES NOT DIVIDE numeric_expression
    (20) proposition -> . numeric_expression DOES NOT DIVIDE numeric_expression EVENLY
    (21) proposition -> . numeric_expression EQUALS EQUALS numeric_expression
    (22) proposition -> . numeric_expression EQUALS numeric_expression
    (23) proposition -> . TRUE
    (24) proposition -> . numeric_expression inequality numeric_expression
    (25) proposition -> . FALSE
    (34) numeric_expression -> . numeric_expression PLUS numeric_expression
    (35) numeric_expression -> . numeric_expression MINUS numeric_expression
    (36) numeric_expression -> . numeric_expression TIMES numeric_expression
    (37) numeric_expression -> . numeric_expression TIMES BY numeric_expression
    (38) numeric_expression -> . numeric_expression DIVIDE numeric_expression
    (39) numeric_expression -> . numeric_expression DIVIDE BY numeric_expression
    (40) numeric_expression -> . numeric_expression POWER numeric_expression
    (41) numeric_expression -> . numeric_expression MOD numeric_expression
    (42) numeric_expression -> . identifier
    (43) numeric_expression -> . numeric_const
    (45) identifier -> . identifier_content
    (46) identifier -> . A identifier_content
    (47) identifier -> . THE identifier_content
    (44) numeric_const -> . NUMERIC_CONSTANT
    (48) identifier_content -> . UNWORD
    (49) identifier_content -> . UNWORD identifier_content

    EQUALS          shift and go to state 9
    DOES            shift and go to state 8
    IF              shift and go to state 13
    NOT             shift and go to state 16
    TRUE            shift and go to state 4
    FALSE           shift and go to state 14
    A               shift and go to state 7
    THE             shift and go to state 12
    NUMERIC_CONSTANT shift and go to state 10
    UNWORD          shift and go to state 11

    program                        shift and go to state 5
    sentence                       shift and go to state 1
    identifier_content             shift and go to state 15
    numeric_const                  shift and go to state 6
    proposition                    shift and go to state 2
    numeric_expression             shift and go to state 3
    identifier                     shift and go to state 17

state 1

    (1) program -> sentence .
    (2) program -> sentence . program
    (1) program -> . sentence
    (2) program -> . sentence program
    (3) sentence -> . proposition SENTENCE_END
    (4) sentence -> . EQUALS proposition SENTENCE_END
    (5) sentence -> . DOES proposition SENTENCE_END
    (6) sentence -> . EQUALS numeric_expression numeric_expression SENTENCE_END
    (7) sentence -> . EQUALS identifier SENTENCE_END
    (8) sentence -> . DOES identifier SENTENCE_END
    (9) sentence -> . proposition IF proposition SENTENCE_END
    (10) sentence -> . proposition IMPLIES proposition SENTENCE_END
    (11) sentence -> . IF proposition THEN proposition SENTENCE_END
    (12) proposition -> . proposition AND proposition
    (13) proposition -> . NOT proposition
    (14) proposition -> . proposition OR proposition
    (15) proposition -> . numeric_expression DIVIDES numeric_expression
    (16) proposition -> . numeric_expression DIVIDES numeric_expression EVENLY
    (17) proposition -> . numeric_expression NOT DIVIDE numeric_expression
    (18) proposition -> . numeric_expression NOT DIVIDE numeric_expression EVENLY
    (19) proposition -> . numeric_expression DOES NOT DIVIDE numeric_expression
    (20) proposition -> . numeric_expression DOES NOT DIVIDE numeric_expression EVENLY
    (21) proposition -> . numeric_expression EQUALS EQUALS numeric_expression
    (22) proposition -> . numeric_expression EQUALS numeric_expression
    (23) proposition -> . TRUE
    (24) proposition -> . numeric_expression inequality numeric_expression
    (25) proposition -> . FALSE
    (34) numeric_expression -> . numeric_expression PLUS numeric_expression
    (35) numeric_expression -> . numeric_expression MINUS numeric_expression
    (36) numeric_expression -> . numeric_expression TIMES numeric_expression
    (37) numeric_expression -> . numeric_expression TIMES BY numeric_expression
    (38) numeric_expression -> . numeric_expression DIVIDE numeric_expression
    (39) numeric_expression -> . numeric_expression DIVIDE BY numeric_expression
    (40) numeric_expression -> . numeric_expression POWER numeric_expression
    (41) numeric_expression -> . numeric_expression MOD numeric_expression
    (42) numeric_expression -> . identifier
    (43) numeric_expression -> . numeric_const
    (45) identifier -> . identifier_content
    (46) identifier -> . A identifier_content
    (47) identifier -> . THE identifier_content
    (44) numeric_const -> . NUMERIC_CONSTANT
    (48) identifier_content -> . UNWORD
    (49) identifier_content -> . UNWORD identifier_content

    $end            reduce using rule 1 (program -> sentence .)
    EQUALS          shift and go to state 9
    DOES            shift and go to state 8
    IF              shift and go to state 13
    NOT             shift and go to state 16
    TRUE            shift and go to state 4
    FALSE           shift and go to state 14
    A               shift and go to state 7
    THE             shift and go to state 12
    NUMERIC_CONSTANT shift and go to state 10
    UNWORD          shift and go to state 11

    program                        shift and go to state 18
    sentence                       shift and go to state 1
    identifier_content             shift and go to state 15
    numeric_const                  shift and go to state 6
    proposition                    shift and go to state 2
    numeric_expression             shift and go to state 3
    identifier                     shift and go to state 17

state 2

    (3) sentence -> proposition . SENTENCE_END
    (9) sentence -> proposition . IF proposition SENTENCE_END
    (10) sentence -> proposition . IMPLIES proposition SENTENCE_END
    (12) proposition -> proposition . AND proposition
    (14) proposition -> proposition . OR proposition

    SENTENCE_END    shift and go to state 21
    IF              shift and go to state 23
    IMPLIES         shift and go to state 20
    AND             shift and go to state 19
    OR              shift and go to state 22


state 3

    (15) proposition -> numeric_expression . DIVIDES numeric_expression
    (16) proposition -> numeric_expression . DIVIDES numeric_expression EVENLY
    (17) proposition -> numeric_expression . NOT DIVIDE numeric_expression
    (18) proposition -> numeric_expression . NOT DIVIDE numeric_expression EVENLY
    (19) proposition -> numeric_expression . DOES NOT DIVIDE numeric_expression
    (20) proposition -> numeric_expression . DOES NOT DIVIDE numeric_expression EVENLY
    (21) proposition -> numeric_expression . EQUALS EQUALS numeric_expression
    (22) proposition -> numeric_expression . EQUALS numeric_expression
    (24) proposition -> numeric_expression . inequality numeric_expression
    (34) numeric_expression -> numeric_expression . PLUS numeric_expression
    (35) numeric_expression -> numeric_expression . MINUS numeric_expression
    (36) numeric_expression -> numeric_expression . TIMES numeric_expression
    (37) numeric_expression -> numeric_expression . TIMES BY numeric_expression
    (38) numeric_expression -> numeric_expression . DIVIDE numeric_expression
    (39) numeric_expression -> numeric_expression . DIVIDE BY numeric_expression
    (40) numeric_expression -> numeric_expression . POWER numeric_expression
    (41) numeric_expression -> numeric_expression . MOD numeric_expression
    (26) inequality -> . inequality OR EQUALS
    (27) inequality -> . inequality OR EQUALS TO
    (28) inequality -> . EQUALS inequality
    (29) inequality -> . CMP_LT
    (30) inequality -> . CMP_GT
    (31) inequality -> . THAN
    (32) inequality -> . CMP_LT THAN
    (33) inequality -> . CMP_GT THAN

    DIVIDES         shift and go to state 37
    NOT             shift and go to state 31
    DOES            shift and go to state 32
    EQUALS          shift and go to state 28
    PLUS            shift and go to state 33
    MINUS           shift and go to state 30
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 26
    POWER           shift and go to state 27
    MOD             shift and go to state 34
    CMP_LT          shift and go to state 25
    CMP_GT          shift and go to state 24
    THAN            shift and go to state 29

    inequality                     shift and go to state 36

state 4

    (23) proposition -> TRUE .

    AND             reduce using rule 23 (proposition -> TRUE .)
    OR              reduce using rule 23 (proposition -> TRUE .)
    SENTENCE_END    reduce using rule 23 (proposition -> TRUE .)
    IF              reduce using rule 23 (proposition -> TRUE .)
    IMPLIES         reduce using rule 23 (proposition -> TRUE .)
    THEN            reduce using rule 23 (proposition -> TRUE .)


state 5

    (0) S' -> program .



state 6

    (43) numeric_expression -> numeric_const .

    DIVIDES         reduce using rule 43 (numeric_expression -> numeric_const .)
    NOT             reduce using rule 43 (numeric_expression -> numeric_const .)
    DOES            reduce using rule 43 (numeric_expression -> numeric_const .)
    EQUALS          reduce using rule 43 (numeric_expression -> numeric_const .)
    PLUS            reduce using rule 43 (numeric_expression -> numeric_const .)
    MINUS           reduce using rule 43 (numeric_expression -> numeric_const .)
    TIMES           reduce using rule 43 (numeric_expression -> numeric_const .)
    DIVIDE          reduce using rule 43 (numeric_expression -> numeric_const .)
    POWER           reduce using rule 43 (numeric_expression -> numeric_const .)
    MOD             reduce using rule 43 (numeric_expression -> numeric_const .)
    CMP_LT          reduce using rule 43 (numeric_expression -> numeric_const .)
    CMP_GT          reduce using rule 43 (numeric_expression -> numeric_const .)
    THAN            reduce using rule 43 (numeric_expression -> numeric_const .)
    EVENLY          reduce using rule 43 (numeric_expression -> numeric_const .)
    SENTENCE_END    reduce using rule 43 (numeric_expression -> numeric_const .)
    IF              reduce using rule 43 (numeric_expression -> numeric_const .)
    IMPLIES         reduce using rule 43 (numeric_expression -> numeric_const .)
    AND             reduce using rule 43 (numeric_expression -> numeric_const .)
    OR              reduce using rule 43 (numeric_expression -> numeric_const .)
    THEN            reduce using rule 43 (numeric_expression -> numeric_const .)
    A               reduce using rule 43 (numeric_expression -> numeric_const .)
    THE             reduce using rule 43 (numeric_expression -> numeric_const .)
    NUMERIC_CONSTANT reduce using rule 43 (numeric_expression -> numeric_const .)
    UNWORD          reduce using rule 43 (numeric_expression -> numeric_const .)


state 7

    (46) identifier -> A . identifier_content
    (48) identifier_content -> . UNWORD
    (49) identifier_content -> . UNWORD identifier_content

    UNWORD          shift and go to state 11

    identifier_content             shift and go to state 38

state 8

    (5) sentence -> DOES . proposition SENTENCE_END
    (8) sentence -> DOES . identifier SENTENCE_END
    (12) proposition -> . proposition AND proposition
    (13) proposition -> . NOT proposition
    (14) proposition -> . proposition OR proposition
    (15) proposition -> . numeric_expression DIVIDES numeric_expression
    (16) proposition -> . numeric_expression DIVIDES numeric_expression EVENLY
    (17) proposition -> . numeric_expression NOT DIVIDE numeric_expression
    (18) proposition -> . numeric_expression NOT DIVIDE numeric_expression EVENLY
    (19) proposition -> . numeric_expression DOES NOT DIVIDE numeric_expression
    (20) proposition -> . numeric_expression DOES NOT DIVIDE numeric_expression EVENLY
    (21) proposition -> . numeric_expression EQUALS EQUALS numeric_expression
    (22) proposition -> . numeric_expression EQUALS numeric_expression
    (23) proposition -> . TRUE
    (24) proposition -> . numeric_expression inequality numeric_expression
    (25) proposition -> . FALSE
    (45) identifier -> . identifier_content
    (46) identifier -> . A identifier_content
    (47) identifier -> . THE identifier_content
    (34) numeric_expression -> . numeric_expression PLUS numeric_expression
    (35) numeric_expression -> . numeric_expression MINUS numeric_expression
    (36) numeric_expression -> . numeric_expression TIMES numeric_expression
    (37) numeric_expression -> . numeric_expression TIMES BY numeric_expression
    (38) numeric_expression -> . numeric_expression DIVIDE numeric_expression
    (39) numeric_expression -> . numeric_expression DIVIDE BY numeric_expression
    (40) numeric_expression -> . numeric_expression POWER numeric_expression
    (41) numeric_expression -> . numeric_expression MOD numeric_expression
    (42) numeric_expression -> . identifier
    (43) numeric_expression -> . numeric_const
    (48) identifier_content -> . UNWORD
    (49) identifier_content -> . UNWORD identifier_content
    (44) numeric_const -> . NUMERIC_CONSTANT

    NOT             shift and go to state 16
    TRUE            shift and go to state 4
    FALSE           shift and go to state 14
    A               shift and go to state 7
    THE             shift and go to state 12
    UNWORD          shift and go to state 11
    NUMERIC_CONSTANT shift and go to state 10

    identifier_content             shift and go to state 15
    numeric_const                  shift and go to state 6
    proposition                    shift and go to state 39
    numeric_expression             shift and go to state 3
    identifier                     shift and go to state 40

state 9

    (4) sentence -> EQUALS . proposition SENTENCE_END
    (6) sentence -> EQUALS . numeric_expression numeric_expression SENTENCE_END
    (7) sentence -> EQUALS . identifier SENTENCE_END
    (12) proposition -> . proposition AND proposition
    (13) proposition -> . NOT proposition
    (14) proposition -> . proposition OR proposition
    (15) proposition -> . numeric_expression DIVIDES numeric_expression
    (16) proposition -> . numeric_expression DIVIDES numeric_expression EVENLY
    (17) proposition -> . numeric_expression NOT DIVIDE numeric_expression
    (18) proposition -> . numeric_expression NOT DIVIDE numeric_expression EVENLY
    (19) proposition -> . numeric_expression DOES NOT DIVIDE numeric_expression
    (20) proposition -> . numeric_expression DOES NOT DIVIDE numeric_expression EVENLY
    (21) proposition -> . numeric_expression EQUALS EQUALS numeric_expression
    (22) proposition -> . numeric_expression EQUALS numeric_expression
    (23) proposition -> . TRUE
    (24) proposition -> . numeric_expression inequality numeric_expression
    (25) proposition -> . FALSE
    (34) numeric_expression -> . numeric_expression PLUS numeric_expression
    (35) numeric_expression -> . numeric_expression MINUS numeric_expression
    (36) numeric_expression -> . numeric_expression TIMES numeric_expression
    (37) numeric_expression -> . numeric_expression TIMES BY numeric_expression
    (38) numeric_expression -> . numeric_expression DIVIDE numeric_expression
    (39) numeric_expression -> . numeric_expression DIVIDE BY numeric_expression
    (40) numeric_expression -> . numeric_expression POWER numeric_expression
    (41) numeric_expression -> . numeric_expression MOD numeric_expression
    (42) numeric_expression -> . identifier
    (43) numeric_expression -> . numeric_const
    (45) identifier -> . identifier_content
    (46) identifier -> . A identifier_content
    (47) identifier -> . THE identifier_content
    (44) numeric_const -> . NUMERIC_CONSTANT
    (48) identifier_content -> . UNWORD
    (49) identifier_content -> . UNWORD identifier_content

    NOT             shift and go to state 16
    TRUE            shift and go to state 4
    FALSE           shift and go to state 14
    A               shift and go to state 7
    THE             shift and go to state 12
    NUMERIC_CONSTANT shift and go to state 10
    UNWORD          shift and go to state 11

    identifier_content             shift and go to state 15
    numeric_const                  shift and go to state 6
    proposition                    shift and go to state 41
    numeric_expression             shift and go to state 42
    identifier                     shift and go to state 43

state 10

    (44) numeric_const -> NUMERIC_CONSTANT .

    SENTENCE_END    reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    PLUS            reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    MINUS           reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    TIMES           reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    DIVIDE          reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    POWER           reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    MOD             reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    DIVIDES         reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    NOT             reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    DOES            reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    EQUALS          reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    CMP_LT          reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    CMP_GT          reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    THAN            reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    A               reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    THE             reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    NUMERIC_CONSTANT reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    UNWORD          reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    IF              reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    IMPLIES         reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    AND             reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    OR              reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    THEN            reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)
    EVENLY          reduce using rule 44 (numeric_const -> NUMERIC_CONSTANT .)


state 11

    (48) identifier_content -> UNWORD .
    (49) identifier_content -> UNWORD . identifier_content
    (48) identifier_content -> . UNWORD
    (49) identifier_content -> . UNWORD identifier_content

  ! shift/reduce conflict for UNWORD resolved as shift
    EVENLY          reduce using rule 48 (identifier_content -> UNWORD .)
    PLUS            reduce using rule 48 (identifier_content -> UNWORD .)
    MINUS           reduce using rule 48 (identifier_content -> UNWORD .)
    TIMES           reduce using rule 48 (identifier_content -> UNWORD .)
    DIVIDE          reduce using rule 48 (identifier_content -> UNWORD .)
    POWER           reduce using rule 48 (identifier_content -> UNWORD .)
    MOD             reduce using rule 48 (identifier_content -> UNWORD .)
    SENTENCE_END    reduce using rule 48 (identifier_content -> UNWORD .)
    IF              reduce using rule 48 (identifier_content -> UNWORD .)
    IMPLIES         reduce using rule 48 (identifier_content -> UNWORD .)
    AND             reduce using rule 48 (identifier_content -> UNWORD .)
    OR              reduce using rule 48 (identifier_content -> UNWORD .)
    THEN            reduce using rule 48 (identifier_content -> UNWORD .)
    DIVIDES         reduce using rule 48 (identifier_content -> UNWORD .)
    NOT             reduce using rule 48 (identifier_content -> UNWORD .)
    DOES            reduce using rule 48 (identifier_content -> UNWORD .)
    EQUALS          reduce using rule 48 (identifier_content -> UNWORD .)
    CMP_LT          reduce using rule 48 (identifier_content -> UNWORD .)
    CMP_GT          reduce using rule 48 (identifier_content -> UNWORD .)
    THAN            reduce using rule 48 (identifier_content -> UNWORD .)
    A               reduce using rule 48 (identifier_content -> UNWORD .)
    THE             reduce using rule 48 (identifier_content -> UNWORD .)
    NUMERIC_CONSTANT reduce using rule 48 (identifier_content -> UNWORD .)
    UNWORD          shift and go to state 11

  ! UNWORD          [ reduce using rule 48 (identifier_content -> UNWORD .) ]

    identifier_content             shift and go to state 44

state 12

    (47) identifier -> THE . identifier_content
    (48) identifier_content -> . UNWORD
    (49) identifier_content -> . UNWORD identifier_content

    UNWORD          shift and go to state 11

    identifier_content             shift and go to state 45

state 13
